// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`🧪 TextInput Story Tests (Direct function call style) Default story renders with email input and error 1`] = `
<div>
  <div
    class="-m-4"
  >
    <div
      class="p-4"
    >
      <div>
        <label
          for="textinput-email"
        >
          <p
            class="text-sm font-medium mb-1.5 text-gray-700 dark:text-white"
          >
            Email
          </p>
        </label>
        <div
          class="relative"
        >
          <div
            class="h-11 absolute shadow-sm rounded-lg w-full flex justify-between items-center px-3.5 pointer-events-none"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
              />
              <polyline
                points="22,6 12,13 2,6"
              />
            </svg>
            <svg
              class="text-gray-400"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <line
                x1="12"
                x2="12.01"
                y1="17"
                y2="17"
              />
            </svg>
          </div>
          <input
            class="w-full select-none text-gray-900 dark:text-white text-md border h-11 px-2 pl-9 pr-9 rounded-lg border-gray-300 dark:border-gray-500 focus:ring-4 focus:border-primary-300 dark:focus:border-gray-100 focus:ring-primary-100 dark:focus:ring-gray-100 dark:focus:ring-opacity-20 bg-white dark:bg-gray-800"
            id="textinput-email"
            placeholder="veronica@example.com"
            type="email"
            value=""
          />
        </div>
        <label
          class="text-sm font-normal mt-1.5 text-gray-500"
        >
          This is a hint text to help the user.
        </label>
      </div>
      <div
        class="mb-4"
      />
      <div>
        <label
          for="textinput-email"
        >
          <p
            class="text-sm font-medium mb-1.5 text-gray-700 dark:text-white"
          >
            Email
          </p>
        </label>
        <div
          class="relative"
        >
          <div
            class="h-11 absolute shadow-sm rounded-lg w-full flex justify-between items-center px-3.5 pointer-events-none"
          >
            <svg
              class="text-gray-500"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <path
                d="M4 4h16c1.1 0 2 .9 2 2v12c0 1.1-.9 2-2 2H4c-1.1 0-2-.9-2-2V6c0-1.1.9-2 2-2z"
              />
              <polyline
                points="22,6 12,13 2,6"
              />
            </svg>
            <svg
              class="text-error-500"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <line
                x1="12"
                x2="12.01"
                y1="17"
                y2="17"
              />
            </svg>
          </div>
          <input
            class="w-full select-none text-gray-900 dark:text-white text-md border h-11 px-2 pl-9 pr-9 rounded-lg border-error-300 focus:ring-4 focus:border-error-300 focus:ring-error-100 bg-white dark:bg-gray-800"
            id="textinput-email"
            placeholder="veronica@example.com"
            type="email"
            value=""
          />
        </div>
        <label
          class="text-sm font-normal mt-1.5 text-error-500"
        >
          This is an error message.
        </label>
        <label
          class="text-sm font-normal mt-1.5 text-gray-500"
        >
          This is a hint text to help the user.
        </label>
      </div>
    </div>
  </div>
</div>
`;

exports[`🧪 TextInput Story Tests (Direct function call style) LeadingTextInput story renders with https prefix and error 1`] = `
<div>
  <div
    class="-m-4"
  >
    <div
      class="p-4"
    >
      <div>
        <label
          for="textinput-website"
        >
          <p
            class="text-sm font-medium mb-1.5 text-gray-700 dark:text-white"
          >
            Website
          </p>
        </label>
        <div
          class="relative flex items-center"
        >
          <div
            class="h-11 absolute shadow-sm rounded-lg w-full flex justify-between items-center px-3.5 pointer-events-none"
          >
            <div />
            <svg
              class="text-gray-400"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <path
                d="M9.09 9a3 3 0 0 1 5.83 1c0 2-3 3-3 3"
              />
              <line
                x1="12"
                x2="12.01"
                y1="17"
                y2="17"
              />
            </svg>
          </div>
          <p
            class="text-sm font-normal flex items-center h-11 text-lg text-gray-500 pl-3.5 pr-3 border border-r-0 rounded-l-lg border-gray-300 dark:border-gray-500 dark:bg-gray-800 text-black dark:text-white"
          >
            https://
          </p>
          <input
            class="w-full select-none text-gray-900 dark:text-white text-md border h-11 px-2 pr-9 rounded-l-0 rounded-r-lg border-gray-300 dark:border-gray-500 focus:ring-4 focus:border-primary-300 dark:focus:border-gray-100 focus:ring-primary-100 dark:focus:ring-gray-100 dark:focus:ring-opacity-20 bg-white dark:bg-gray-800"
            id="textinput-website"
            placeholder="example.com"
            type="text"
            value=""
          />
        </div>
        <label
          class="text-sm font-normal mt-1.5 text-gray-500"
        >
          This is a hint text to help the user.
        </label>
      </div>
      <div
        class="mb-4"
      />
      <div>
        <label
          for="textinput-website"
        >
          <p
            class="text-sm font-medium mb-1.5 text-gray-700 dark:text-white"
          >
            Website
          </p>
        </label>
        <div
          class="relative flex items-center"
        >
          <div
            class="h-11 absolute shadow-sm rounded-lg w-full flex justify-between items-center px-3.5 pointer-events-none"
          >
            <div />
            <svg
              class="text-error-500"
              fill="none"
              height="1em"
              stroke="currentColor"
              stroke-linecap="round"
              stroke-linejoin="round"
              stroke-width="2"
              viewBox="0 0 24 24"
              width="1em"
              xmlns="http://www.w3.org/2000/svg"
            >
              <circle
                cx="12"
                cy="12"
                r="10"
              />
              <line
                x1="12"
                x2="12"
                y1="8"
                y2="12"
              />
              <line
                x1="12"
                x2="12.01"
                y1="16"
                y2="16"
              />
            </svg>
          </div>
          <p
            class="text-sm font-normal flex items-center h-11 text-lg text-gray-500 pl-3.5 pr-3 border border-r-0 rounded-l-lg border-gray-300 dark:border-gray-500 dark:bg-gray-800 text-black dark:text-white"
          >
            https://
          </p>
          <input
            class="w-full select-none text-gray-900 dark:text-white text-md border h-11 px-2 pr-9 rounded-l-0 rounded-r-lg border-error-300 focus:ring-4 focus:border-error-300 focus:ring-error-100 bg-white dark:bg-gray-800"
            id="textinput-website"
            placeholder="example.com"
            type="text"
            value=""
          />
        </div>
        <label
          class="text-sm font-normal mt-1.5 text-error-500"
        >
          This is an error message.
        </label>
      </div>
    </div>
  </div>
</div>
`;
